--- a/.travis.yml
+++ b/.travis.yml
@@ -46,13 +46,13 @@ after_script:
 
 matrix:
   include:
-    # Clang 3.5 - Release - Node
+    # GCC 5 - Release - Node
     - os: linux
       sudo: false
       language: node
-      compiler: ": node4-clang35-release"
-      env: BUILDTYPE=Release _CXX=clang++-3.5 _CC=clang-3.5
-      addons: *clang35
+      compiler: ": node4-gcc5-release"
+      env: BUILDTYPE=Release _CXX=g++-5 _CC=gcc-5
+      addons: *gcc5
       script:
         - nvm install 4
         - nvm use 4
@@ -81,21 +81,21 @@ matrix:
       env: BUILDTYPE=Release _CXX=g++-5 _CC=gcc-5
       addons: *gcc5
 
-    # Clang 3.5 - Debug
+    # GCC 5 - Debug
     - os: linux
       sudo: false
       language: cpp
-      compiler: ": linux-clang35-debug"
-      env: BUILDTYPE=Debug _CXX=clang++-3.5 _CC=clang-3.5
-      addons: *clang35
+      compiler: ": linux-gcc5-debug"
+      env: BUILDTYPE=Debug _CXX=g++-5 _CC=gcc-5
+      addons: *gcc5
 
-    # Clang 3.5 - Release
+    # GCC 5 - Release
     - os: linux
       sudo: false
       language: cpp
-      compiler: ": linux-clang35-release"
-      env: BUILDTYPE=Release _CXX=clang++-3.5 _CC=clang-3.5
-      addons: *clang35
+      compiler: ": linux-gcc5-release"
+      env: BUILDTYPE=Release _CXX=g++-5 _CC=gcc-5
+      addons: *gcc5
 
     # Qt 4 - Release
     - os: linux
